[gd_scene load_steps=12 format=2]

[ext_resource path="res://Images/Dot_line.png" type="Texture" id=1]
[ext_resource path="res://Images/Border.png" type="Texture" id=2]
[ext_resource path="res://Scripts/ceiling_floor.gd" type="Script" id=3]
[ext_resource path="res://Scripts/wall.gd" type="Script" id=4]
[ext_resource path="res://font and sound/PressStart2P-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/ball.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/GameScript_2P.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.50205, 2.50212 )

[sub_resource type="DynamicFont" id=2]
outline_color = Color( 1, 1, 1, 0 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 5 )

[node name="GameScene" type="Node2D"]
script = ExtResource( 8 )

[node name="ball" parent="." instance=ExtResource( 7 )]
position = Vector2( 160, 90 )

[node name="left" parent="." instance=ExtResource( 6 )]
position = Vector2( 16, 90 )

[node name="right" parent="." instance=ExtResource( 6 )]
position = Vector2( 304, 90 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 153.0
margin_right = 169.0
margin_bottom = 180.0
rect_min_size = Vector2( 0, 180 )
texture = ExtResource( 1 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Up" type="Area2D" parent="."]
position = Vector2( 160, 0 )
scale = Vector2( 64, 1 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Up"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Up"]
texture = ExtResource( 2 )

[node name="Down" type="Area2D" parent="."]
position = Vector2( 160, 180 )
scale = Vector2( 64, 1 )
script = ExtResource( 3 )
__meta__ = {
"_editor_description_": ""
}
_bounce_direction_y = -1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Down"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Down"]
texture = ExtResource( 2 )

[node name="Right" type="Area2D" parent="."]
position = Vector2( 320, 90 )
scale = Vector2( 1, 37 )
script = ExtResource( 4 )
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Right"]
texture = ExtResource( 2 )

[node name="Left" type="Area2D" parent="."]
position = Vector2( 0, 90 )
scale = Vector2( 1, 37 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Left"]
texture = ExtResource( 2 )

[node name="Left Score" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.588235 )
margin_left = 121.0
margin_top = 15.0
margin_right = 217.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 2 )
text = "0 -"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Right Score" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.588235 )
margin_left = 185.0
margin_top = 15.0
margin_right = 225.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
[connection signal="area_entered" from="Up" to="Up" method="_on_Up_area_entered"]
[connection signal="area_entered" from="Down" to="Down" method="_on_Down_area_entered"]
[connection signal="ScoreChange" from="Right" to="." method="_on_Right_ScoreChange"]
[connection signal="area_entered" from="Right" to="Right" method="_on_Right_area_entered"]
[connection signal="ScoreChange" from="Left" to="." method="_on_Left_ScoreChange"]
[connection signal="area_entered" from="Left" to="Left" method="_on_Left_area_entered"]

[editable path="left"]
